{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 549,
  "lineage": "57fe422c-ca23-b778-8250-0fc8158d15ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01d448ef6367bbb81",
            "arn": "arn:aws:ec2:af-south-1:390701132944:instance/i-0d28f71b6de9ce591",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm-profile",
            "id": "i-0d28f71b6de9ce591",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e8743192be129f6a"
              }
            ],
            "primary_network_interface_id": "eni-0e8743192be129f6a",
            "private_dns": "ip-10-0-1-58.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-16-28-98-65.af-south-1.compute.amazonaws.com",
            "public_ip": "16.28.98.65",
            "region": "af-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3cc003c60dff82e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0870a08301127db29",
            "tags": {
              "Name": "nginx-server"
            },
            "tags_all": {
              "Name": "nginx-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0374a93e757de63ae"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "i-0d28f71b6de9ce591",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm",
            "aws_iam_role.ssm",
            "aws_instance.postgres",
            "aws_route_table.private",
            "aws_security_group.nginx",
            "aws_security_group.postgres",
            "aws_security_group.ssm",
            "aws_subnet.nginx",
            "aws_subnet.postgres",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2messages",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.ssm",
            "aws_vpc_endpoint.ssmmessages",
            "data.aws_ami.al2",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01d448ef6367bbb81",
            "arn": "arn:aws:ec2:af-south-1:390701132944:instance/i-008c51d89f5006557",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm-profile",
            "id": "i-008c51d89f5006557",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-015e2beaf5ab354ee"
              }
            ],
            "primary_network_interface_id": "eni-015e2beaf5ab354ee",
            "private_dns": "ip-10-0-2-65.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.65",
            "region": "af-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc6c45acb133a008",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5e6704b2f4a4413",
            "tags": {
              "Name": "postgres-server"
            },
            "tags_all": {
              "Name": "postgres-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f433413e86c381a6"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "i-008c51d89f5006557",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm",
            "aws_iam_role.ssm",
            "aws_route_table.private",
            "aws_security_group.nginx",
            "aws_security_group.postgres",
            "aws_security_group.ssm",
            "aws_subnet.postgres",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2messages",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.ssm",
            "aws_vpc_endpoint.ssmmessages",
            "data.aws_ami.al2",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:internet-gateway/igw-05dbd216b230937de",
            "id": "igw-05dbd216b230937de",
            "owner_id": "390701132944",
            "region": "af-south-1",
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05dbd216b230937de",
            "id": "r-rtb-0d37c94c7ca8e3cef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "af-south-1",
            "route_table_id": "rtb-0d37c94c7ca8e3cef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "af-south-1",
            "route_table_id": "rtb-0d37c94c7ca8e3cef"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:route-table/rtb-0d47d51b16135c0f7",
            "id": "rtb-0d47d51b16135c0f7",
            "owner_id": "390701132944",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "rtb-0d47d51b16135c0f7",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:route-table/rtb-0d37c94c7ca8e3cef",
            "id": "rtb-0d37c94c7ca8e3cef",
            "owner_id": "390701132944",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05dbd216b230937de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "rtb-0d37c94c7ca8e3cef",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0353da5179a1f745b",
            "region": "af-south-1",
            "route_table_id": "rtb-0d37c94c7ca8e3cef",
            "subnet_id": "subnet-0870a08301127db29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.nginx",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2682c5cbb8be8d2",
            "region": "af-south-1",
            "route_table_id": "rtb-0d47d51b16135c0f7",
            "subnet_id": "subnet-0f5e6704b2f4a4413"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.postgres",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:security-group/sg-0374a93e757de63ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0374a93e757de63ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "390701132944",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "sg-0374a93e757de63ae",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:security-group/sg-0f433413e86c381a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f433413e86c381a6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0374a93e757de63ae"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres-sg",
            "name_prefix": "",
            "owner_id": "390701132944",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "sg-0f433413e86c381a6",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_security_group.nginx",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:security-group/sg-0c8056eb9d8266ee7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8056eb9d8266ee7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0374a93e757de63ae",
                  "sg-0f433413e86c381a6"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm-sg",
            "name_prefix": "",
            "owner_id": "390701132944",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "sg-0c8056eb9d8266ee7",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_security_group.nginx",
            "aws_security_group.postgres",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:subnet/subnet-0870a08301127db29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0870a08301127db29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390701132944",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "subnet-0870a08301127db29",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:subnet/subnet-0f5e6704b2f4a4413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5e6704b2f4a4413",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390701132944",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "390701132944",
            "id": "subnet-0f5e6704b2f4a4413",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:vpc/vpc-03dfde120269a1e6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030ffd324598c5452",
            "default_route_table_id": "rtb-0d46cbb11a87207fe",
            "default_security_group_id": "sg-05cd2d44b7ed9b792",
            "dhcp_options_id": "dopt-0e39b2c7533e9e24d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03dfde120269a1e6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d46cbb11a87207fe",
            "owner_id": "390701132944",
            "region": "af-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:vpc-endpoint/vpce-0250d95849616211e",
            "dns_entry": [
              {
                "dns_name": "vpce-0250d95849616211e-p55wk3qv.ec2messages.af-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z09302161J80N9A7UTP7U"
              },
              {
                "dns_name": "vpce-0250d95849616211e-p55wk3qv-af-south-1a.ec2messages.af-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z09302161J80N9A7UTP7U"
              },
              {
                "dns_name": "ec2messages.af-south-1.amazonaws.com",
                "hosted_zone_id": "Z04778132EE87KRLD0OE5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0250d95849616211e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07dc25a2ad898ada0"
            ],
            "owner_id": "390701132944",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "af-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c8056eb9d8266ee7"
            ],
            "service_name": "com.amazonaws.af-south-1.ec2messages",
            "service_region": "af-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.161",
                "subnet_id": "subnet-0f5e6704b2f4a4413"
              }
            ],
            "subnet_ids": [
              "subnet-0f5e6704b2f4a4413"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nginx",
            "aws_security_group.postgres",
            "aws_security_group.ssm",
            "aws_subnet.postgres",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:vpc-endpoint/vpce-0bbfe09deef0c7927",
            "cidr_blocks": [
              "52.95.180.0/24",
              "3.5.228.0/22",
              "52.95.175.0/24",
              "3.5.202.0/23",
              "52.95.176.0/24"
            ],
            "id": "vpce-0bbfe09deef0c7927",
            "owner_id": "390701132944",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-a3ac49ca",
            "private_dns_enabled": false,
            "region": "af-south-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d47d51b16135c0f7"
            ],
            "service_name": "com.amazonaws.af-south-1.s3",
            "service_region": "af-south-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:vpc-endpoint/vpce-05d4032b3a1c88d0a",
            "dns_entry": [
              {
                "dns_name": "vpce-05d4032b3a1c88d0a-qlqy3633.ssm.af-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z09302161J80N9A7UTP7U"
              },
              {
                "dns_name": "vpce-05d4032b3a1c88d0a-qlqy3633-af-south-1a.ssm.af-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z09302161J80N9A7UTP7U"
              },
              {
                "dns_name": "ssm.af-south-1.amazonaws.com",
                "hosted_zone_id": "Z047652035DQTTYR0A1JY"
              },
              {
                "dns_name": "ssm.af-south-1.api.aws",
                "hosted_zone_id": "Z012134118T0GB55M2T1C"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05d4032b3a1c88d0a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04273befeb65a27ec"
            ],
            "owner_id": "390701132944",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "af-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c8056eb9d8266ee7"
            ],
            "service_name": "com.amazonaws.af-south-1.ssm",
            "service_region": "af-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.44",
                "subnet_id": "subnet-0f5e6704b2f4a4413"
              }
            ],
            "subnet_ids": [
              "subnet-0f5e6704b2f4a4413"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nginx",
            "aws_security_group.postgres",
            "aws_security_group.ssm",
            "aws_subnet.postgres",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:390701132944:vpc-endpoint/vpce-042bb190e923beda6",
            "dns_entry": [
              {
                "dns_name": "vpce-042bb190e923beda6-yllwr63i.ssmmessages.af-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z09302161J80N9A7UTP7U"
              },
              {
                "dns_name": "vpce-042bb190e923beda6-yllwr63i-af-south-1a.ssmmessages.af-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z09302161J80N9A7UTP7U"
              },
              {
                "dns_name": "ssmmessages.af-south-1.amazonaws.com",
                "hosted_zone_id": "Z050372734F9L5R7JZAKT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-042bb190e923beda6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-095df9c465ec324e8"
            ],
            "owner_id": "390701132944",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "af-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c8056eb9d8266ee7"
            ],
            "service_name": "com.amazonaws.af-south-1.ssmmessages",
            "service_region": "af-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.184",
                "subnet_id": "subnet-0f5e6704b2f4a4413"
              }
            ],
            "subnet_ids": [
              "subnet-0f5e6704b2f4a4413"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03dfde120269a1e6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nginx",
            "aws_security_group.postgres",
            "aws_security_group.ssm",
            "aws_subnet.postgres",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}